# innovation-jam-ops

./: README.md  pyproject.toml
apps/: pyproject.toml
apps/apple_prediction/: README.md  apple_prediction.py
apps/binary_predict/: README.md  binary_predict.py  pyproject.toml
apps/twitter_check/: README.md  pyproject.toml  twitter_check.py
data/: meta.csv  meta_practice.csv
services/finnhub_data/: finnhub_data.py  pyproject.toml
services/predict_buy_sell/: README.md  predict_buy_sell.py  pyproject.toml
services/sentiment/: pyproject.toml  sentiment.py
services/twitter_data/: README.md  pyproject.toml  twitter_data.py
unused_programs/: csv_reader.py  prediction_testing.py  scratch.py  stockAlgo.py  stock_bg.py  t10LineGraph.py  top_stocks.py
unused_programs/Cam_Projects/celsius_converter/: Celsius_Converter.py  README.md
unused_programs/Cam_Projects/prime_checker/: Prime_checker.py  README.md
unused_programs/Cam_Projects/spongebob_letters/: README.md  Spongebob_letters.py
unused_programs/Cam_Projects/while_loop/: README.md  While_loop.py
