[tool.poetry]
name = "apps"
version = "0.1.0"
description = ""
authors = ["ja185332 <ja185332.ncr.com>"]

[tool.poetry.dependencies]
python = "^3.8"
predict_buy_sell = {path = "../services/predict_buy_sell"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
