[tool.poetry]
name = "binary_predict"
version = "0.1.0"
description = ""
authors = ["ja185332 <ja185332.ncr.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
predict_buy_sell = {path = "../../services/predict_buy_sell"}
sentiment = {path = "../../services/sentiment"}
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
