[tool.poetry]
name = "twitter_check"
version = "0.1.0"
description = ""
authors = ["ja185332 <ja185332.ncr.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
twitter_data = {path = "../../services/twitter_data"}
argparse = "^1.4.0"
pandas = "^1.4.3"
textblob = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
